039-AKSEnterpriseGrade/Coach/Solutions/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: api
    aadpodidentitybinding: app1-identity
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
      - image: __acr_name__.azurecr.io/hack/sqlapi:1.0
        name: api
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    run: api
