039-AKSEnterpriseGrade/Coach/Solutions/external_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: publicweb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    run: web
