039-AKSEnterpriseGrade/Coach/Solutions/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: __acr_name__.azurecr.io/hack/web:1.0
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    run: web
