039-AKSEnterpriseGrade/Coach/Solutions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: __ingress_class__
  rules:
  - host: __ingress_ip__.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
